Задание 1 в модуле 2, правка 3

--- a/source/form.html
+++ b/source/form.html
@@ -11,9 +11,8 @@
 
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="nav-position">
+        <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <div class="main-nav__wrapper">
             <li class="site-list__item site-list__item--active">
               <a href="index.html">Главная</a>
             </li>
@@ -155,7 +154,7 @@
         </ul>
       </div>
 
-      <div class="page-footer__copyright copyright">
+      <div class="footer__copyright copyright">
         <b class="copyright__text"> Разработано:</b><a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"> HTML Academy</a>
       </div> 
 
