--- a/source/index.html
+++ b/source/index.html
@@ -10,9 +10,8 @@
 
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="nav-position">
+        <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <div class="main-nav__wrapper">
             <li class="site-list__item site-list__item--active">
               <a href="index.html">Главная</a>
             </li>
@@ -41,7 +40,7 @@
       <section class="welcome">
         <div class="welcome-position">    
           <div class="welcome-wrap">
-            <img class="welcome__picture" src="#" width="320" height="389" alt="Городок «Седона»">
+            <img class="welcome__picture" src="https://via.placeholder.com/320x389" width="320" height="389" alt="Городок «Седона»">
           </div>
           <b class="welcome__number-zero">Седона - небольшой <br> городок в Аризоне, <br> заслуживающий большего!</b>
           <p class="welcome__number-zero">Рассмотрим 5 причин, по которым <br> Седона круче, чем Градн Каньон!</p>            
@@ -55,25 +54,25 @@
             <p class="realtown__number-one"> - №1 -</p>
             <p class="realtown__discription">Седона не аттрацион для туристов, <br> там течёт своя жизнь</p>
             <img class="realtown__picture" src="https://via.placeholder.com/320x260" width="320" height="260" alt="фотография городка «Седона»">
+           
+            <div class="advantages">
+              <h2 class="visually-hidden"> Преимущества городка Седона</h2>
+              <ul class="advantages-list">
+                <li class="advantages__item advantages__item--home">
+                  <h3 class="advantages__title">Жильё</h3>
+                  <p class="advantages__description">Рекомендуем пожить в <br> настоящем мотеле, все как в<br>кино</p>
+                </li>
+                <li class="advantages__item advantages__item--souvenires">
+                  <h3 class="advantages__title">Сувениры </h3>
+                  <p class="advantages__description">Не только китайского, но и <br>местного производства</p>
+                </li>
+                <li class="advantages__item advantages__item--meal">
+                  <h3 class="advantages__title">Еда</h3>
+                  <p class="advantages__description">Всегда заказывайте <br>фирменный бургер, вы не<br>разочаруетесь</p>
+                </li>
+              </ul>
+            </div>
           </div>
-        </li>
-  
-        <li class="advantages">
-          <h2 class="visually-hidden"> Преимущества городка Седона</h2>
-          <ul class="advantages-list">
-            <li class="advantages__item advantages__item--home">
-              <h3 class="advantages__title">Жильё</h3>
-              <p class="unit-one__advantage-description">Рекомендуем пожить в <br> настоящем мотеле, все как в<br>кино</p>
-            </li>
-            <li class="advantages__item advantages__item--souvenires">
-              <h3 class="advantages__title">Сувениры </h3>
-              <p class="unit-one__advantage-description">Не только китайского, но и <br>местного производства</p>
-            </li>
-            <li class="advantages__item advantages__item--meal">
-              <h3 class="advantages__title">Еда</h3>
-              <p class="unit-one__advantage-description">Всегда заказывайте <br>фирменный бургер, вы не<br>разочаруетесь</p>
-            </li>
-          </ul>
         </li>
   
         <li class="bridge places">
@@ -104,7 +103,7 @@
 
       <section class="question">
         <b class="question__text">Заинтересовались?</b>
-        <p class="places__content">Укажите предполагаемые даты<br>поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
+        <p class="question__content">Укажите предполагаемые даты<br>поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
         <a class="question__search button"> Найти гостиницу</a>
       </section>
 
