Задание 1, модуль 2, правка 4, сделано всё, кроме скрытых замечаний

--- a/source/index.html
+++ b/source/index.html
@@ -38,6 +38,7 @@
       <h1 class="visually-hidden"> Сайт туристического агенства «Седона»</h1>
 
       <section class="welcome">
+        <h2 class="visually-hidden"> Вступительная часть страницы</h2>
         <div class="welcome-position">    
           <div class="welcome-wrap">
             <img class="welcome__picture" src="https://via.placeholder.com/320x389" width="320" height="389" alt="Городок «Седона»">
@@ -102,12 +103,14 @@
       </ol>
 
       <section class="question">
+        <h2 class="visually-hidden"> Часть страницы с предложением найти гостиницу</h2>
         <b class="question__text">Заинтересовались?</b>
         <p class="question__content">Укажите предполагаемые даты<br>поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
         <a class="question__search button"> Найти гостиницу</a>
       </section>
 
       <section class="map">
+        <h2 class="visually-hidden">Часть страницы с картой</h2>
         <div class="map-position">
           <img class="map-picture" src="https://via.placeholder.com/320x360" width="320" height="360" alt="Карта">
         </div>
@@ -118,7 +121,7 @@
     <footer class="footer">
 
       <div class="footer__social social">
-        <b class="footer__title">#visitsedona</h3>
+        <h3 class="footer__title">#visitsedona</h3>
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="https://twitter.com/sedona">Мы в Твиттере</a>
@@ -133,7 +136,7 @@
       </div>
 
       <div class="footer__copyright copyright">
-        <b class="copyright__text"> Разработано:</b><a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"> HTML Academy</a>
+        <b class="copyright__text"> Разработано:</b><a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"> HTML Academy</a>
       </div>
 
     </footer>
