--- a/source/photo.html
+++ b/source/photo.html
@@ -38,10 +38,8 @@
       <h1 class="visually-hidden"> Страница с фотографиями для туристического агенства «Седона»</h1>
 
       <section class="head-page">
+        <h2 class="visually-hidden">Вступительная часть страницы</h2>
 
-        <div class="head-page__position">
-          <img class="head-page__picture" src="https://via.placeholder.com/320x159" width="320" height="159" alt="Вид на горы в городке Седона">
-        </div>
         <div>
           <b class="head-page__title">Фото и видео</b>
           <p class="head-page__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
@@ -50,6 +48,7 @@
       </section>
 
       <section class="photos">
+        <h2 class="visually-hidden">Часть страницы с фотографиями</h2>
 
         <div class="photos-position">
           <ul class="photos-list">
@@ -95,7 +94,7 @@
     <footer class="footer">
 
       <div class="footer__social social">
-        <b class="footer__title">#visitsedona</h3>
+        <h3 class="footer__title">#visitsedona</h3>
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="https://twitter.com/sedona">Мы в Твиттере</a>
@@ -110,7 +109,7 @@
       </div>
 
       <div class="footer__copyright copyright">
-        <b class="copyright__text"> Разработано:</b><a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"> HTML Academy</a>
+        <b class="copyright__text"> Разработано:</b><a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"> HTML Academy</a>
       </div> 
 
     </footer>
