--- a/source/form.html
+++ b/source/form.html
@@ -39,20 +39,19 @@
       <h1 class="visually-hidden">Страница для отзыва</h1>
 
       <section class="head-page">
-
-        <div class="head-title__position">
-          <img class="head-page__picture" src="https://via.placeholder.com/320x159" width="320" height="159" alt="Вид на горы в городке Седона">
-        </div>
+        <h2 class="visually-hidden">Вступительная часть страницы</h2>
+        
         <div>
-          <b class="head-page__title">Оставьте свой отзыв</b>
+          <h3 class="head-page__title">Оставьте свой отзыв</h3>
           <p class="head-page__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а так же о<br>посещённых вами <br>достопримечательностях</p>
         </div>
 
       </section>
 
       <section class="form">
+        <h2 class="visually-hidden">Форма для отзыва клиента</h2>
 
-        <form class="form" action="https://echo.htmlacademy.ru" method="GET">
+        <form class="form" action="https://echo.htmlacademy.ru" method="POST">
 
           <fieldset class="customer">
             <b class="customer__title">Представьтесь:</b>
@@ -73,14 +72,14 @@
           <fieldset class="contacts">
             <b class="contacts__title">Контактная информация:</b>
             <div  class="contacts__tel">
-              <label for="tel">Контактный телефон:<sup>*</sup> </label> 
+              <label for="telephone">Контактный телефон:<sup>*</sup> </label> 
               <br>
-              <input type="tel" name="tel" value="Введите телефон" required>
+              <input type="tel" name="tel" id="telephone" value="Введите телефон" required>
             </div>
             <div class="contacts__email">
-              <label for="email">Электронная почта:<sup>*</sup></label>
+              <label for="e-mail">Электронная почта:<sup>*</sup></label>
               <br>
-              <input type="email" name="email" value="Введите e-mail" required>
+              <input type="email" name="email" id="e-mail" value="Введите e-mail" required>
             </div>
           </fieldset>
 
@@ -90,7 +89,7 @@
               <input type="radio" name="opinion" id="form-one" checked>
               <label for="form-one">Скорее положительное</label>
             </div>
-            <div class="radio__two"></div>
+            <div class="radio__two">
               <input type="radio" name="opinion" id="form-two">
               <label for="form-two">Скорее отрицательное</label>
             </div>
@@ -101,22 +100,22 @@
           </fieldset>
 
           <fieldset class="checkbox">
-            <b class="chechbox__title">Посещенные<br>достопримечательности:</b>
+            <b class="checkbox__title">Посещенные<br>достопримечательности:</b>
             <div class="checkbox__one">
-              <input type="checkbox" name="check-one" id="form-one" checked>
-              <label for="form-one">Мост Дяьвола</label>
+              <input type="checkbox" name="check-one" id="one" checked>
+              <label for="one">Мост Дяьвола</label>
             </div>
             <div class="checkbox__two">
-              <input type="checkbox" name="check-two" id="form-two" checked>
-              <label for="form-two">Гора-Колокол</label>
+              <input type="checkbox" name="check-two" id="two" checked>
+              <label for="two">Гора-Колокол</label>
             </div>
             <div class="checkbox__three">
-              <input type="checkbox" name="check-three" id="form-three" checked>
-              <label for="form-three">Слайд-парк</label>
+              <input type="checkbox" name="check-three" id="three" checked>
+              <label for="three">Слайд-парк</label>
             </div>
             <div class="checkbox__four">
-              <input type="checkbox" name="chech-four" id="form-four">
-              <label for="form-four">Красные скалы</label>
+              <input type="checkbox" name="chech-four" id="four">
+              <label for="four">Красные скалы</label>
             </div>
           </fieldset>
 
@@ -128,7 +127,7 @@
           </fieldset>
 
           <div class="send-toggle button">
-            <button type="submit" value="Отправить отзыв">
+            <button class="button">Отправить отзыв</button>
           </div>
         </form>
 
@@ -140,7 +139,7 @@
     <footer class="footer">
 
       <div class="footer__social social">
-        <b class="footer__title">#visitsedona</h3>
+        <h3 class="footer__title">#visitsedona</h3>
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="https://twitter.com/sedona">Мы в Твиттере</a>
@@ -155,7 +154,7 @@
       </div>
 
       <div class="footer__copyright copyright">
-        <b class="copyright__text"> Разработано:</b><a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"> HTML Academy</a>
+        <b class="copyright__text"> Разработано:</b><a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"> HTML Academy</a>
       </div> 
 
     </footer>
