Задание 1, модуль 2, правка 5

--- a/source/form.html
+++ b/source/form.html
@@ -54,7 +54,7 @@
         <form class="form" action="https://echo.htmlacademy.ru" method="POST">
 
           <fieldset class="customer">
-            <b class="customer__title">Представьтесь:</b>
+            <legend class="customer__title">Представьтесь:</legend>
             <div class="customer__name">
               <label for="customer-name-id">Имя<sup>*</sup></label>
               <input type="text" name="customer-name" id="customer-name-id" value="Петр" required>
@@ -70,7 +70,7 @@
           </fieldset>
 
           <fieldset class="contacts">
-            <b class="contacts__title">Контактная информация:</b>
+            <legend class="contacts__title">Контактная информация:</legend>
             <div  class="contacts__tel">
               <label for="telephone">Контактный телефон:<sup>*</sup> </label> 
               <br>
@@ -84,7 +84,7 @@
           </fieldset>
 
           <fieldset class="radio">
-            <b class="radio__title">Ваше общее впечатление:</b>
+            <legend class="radio__title">Ваше общее впечатление:</legend>
             <div class="radio__one">
               <input type="radio" name="opinion" id="form-one" checked>
               <label for="form-one">Скорее положительное</label>
@@ -100,7 +100,7 @@
           </fieldset>
 
           <fieldset class="checkbox">
-            <b class="checkbox__title">Посещенные<br>достопримечательности:</b>
+            <legend class="checkbox__title">Посещенные<br>достопримечательности:</legend>
             <div class="checkbox__one">
               <input type="checkbox" name="check-one" id="one" checked>
               <label for="one">Мост Дяьвола</label>
@@ -120,7 +120,7 @@
           </fieldset>
 
           <fieldset class="discription">
-            <b class="discription__title">Опишите свои эмоции:</b>
+            <legend class="discription__title">Опишите свои эмоции:</legend>
             <div class="discription__text">
               <textarea name="comment" id="comment-field" rows="5" cols="20">Опишите подробно все свои восторги</textarea>
             </div>
