--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
         <h2 class="visually-hidden"> Вступительная часть страницы</h2>
         <div class="welcome-position">    
           <div class="welcome-wrap">
-            <img class="welcome__picture" src="https://via.placeholder.com/320x389" width="320" height="389" alt="Городок «Седона»">
+            <p><a class="welcome__picture" href="https://via.placeholder.com/320x389">Городок «Седона»</a></p>
           </div>
           <b class="welcome__number-zero">Седона - небольшой <br> городок в Аризоне, <br> заслуживающий большего!</b>
           <p class="welcome__number-zero">Рассмотрим 5 причин, по которым <br> Седона круче, чем Градн Каньон!</p>            
@@ -54,8 +54,8 @@
             <p class="realtown__title"> Настоящий городок</p>
             <p class="realtown__number-one"> - №1 -</p>
             <p class="realtown__discription">Седона не аттрацион для туристов, <br> там течёт своя жизнь</p>
-            <img class="realtown__picture" src="https://via.placeholder.com/320x260" width="320" height="260" alt="фотография городка «Седона»">
-           
+            <p><a class="realtown__picture" href="https://via.placeholder.com/320x260">фотография городка «Седона»</a></p>
+
             <div class="advantages">
               <h2 class="visually-hidden"> Преимущества городка Седона</h2>
               <ul class="advantages-list">
@@ -80,7 +80,7 @@
           <p class="places__disctiption">Там есть мост дьявола</p>
           <p class="places__number"> - №2 -</p>
           <p class="places__recomendation">Да, по нему можно пройти!Если вы <br>осмелитесь, конечно</p>
-          <img class="places__picture" src="https://via.placeholder.com/320x260" width="320" height="260" alt="Мост">
+          <p><a class="places__picture" href="https://via.placeholder.com/320x260" >Мост</a></p>
         </li>
   
         <li class="square places">
@@ -106,13 +106,13 @@
         <h2 class="visually-hidden"> Часть страницы с предложением найти гостиницу</h2>
         <b class="question__text">Заинтересовались?</b>
         <p class="question__content">Укажите предполагаемые даты<br>поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
-        <a class="question__search button"> Найти гостиницу</a>
+        <a class="question__search button" href="#">Найти гостиницу</a>
       </section>
 
       <section class="map">
         <h2 class="visually-hidden">Часть страницы с картой</h2>
         <div class="map-position">
-          <img class="map-picture" src="https://via.placeholder.com/320x360" width="320" height="360" alt="Карта">
+          <p><a class="map-picture" href="https://via.placeholder.com/320x360" > Карта</a></p>
         </div>
       </section>
 
