--- a/source/photo.html
+++ b/source/photo.html
@@ -54,34 +54,38 @@
           <ul class="photos-list">
             <li class="photos-item">
               <div class="photos-item__position">
-                <img class="photos-item__picture" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Фотография степи">
+                <p><a class="photos-item__picture" href="https://via.placeholder.com/280x280">Фотография степи</a></p>
               </div>
-              <b class="photos-item__title">Неродные просторы</b>
+              <h3 class="photos-item__title">Неродные просторы</h3>
               <p class="photos-item__author">Автор фото: Борис</p>
-              <p class="photos-item__likes photos-item__likes--trump"> 1350</p>
+              <button class="photos-item__likes photos-item__likes--trump">Изображение лайка</button>
+              <p class="photos-item__likes"> 1350</p>
             </li>
             <li class="photos-item">
               <div class="photos-item__position">
-                <img class="photos-item__picture" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Фотография кактуса">
+                <p><a class="photos-item__picture" href="https://via.placeholder.com/280x280" >Фотография кактуса</a></p>
               </div>
-              <b class="photos-item__title">Местная растительность</b>
+              <h3 class="photos-item__title">Местная растительность</h3>
               <p class="photos-item__author">Автор фото: Сергей</p>
+              <button class="photos-item__likes photos-item__likes--trump">Изображение лайка</button>
               <p class="photos-item__likes photos-item__likes--trump"> 143</p>
             </li>
             <li class="photos-item">
               <div class="photos-item__position">
-                <img class="photos-item__picture" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Фотография дороги в горах">
+                <p><a class="photos-item__picture" href="https://via.placeholder.com/280x280">Фотография дороги в горах</a></p>
               </div>
-              <b class="photos-item__title">Дорога на север</b>
+              <h3 class="photos-item__title">Дорога на север</h3>
               <p class="photos-item__author">Автор фото: Петр</p>
+              <button class="photos-item__likes photos-item__likes--trump">Изображение лайка</button>
               <p class="photos-item__likes photos-item__likes--trump">96</p>
             </li>
             <li class="photos-item">
               <div class="photos-item__position">
-                <img class="photos-item__picture" src="https://via.placeholder.com/280x280" width="280" height="280" alt="Фотография моста">
+                <p><a class="photos-item__picture" href="https://via.placeholder.com/280x280">Фотография моста</a></p>
               </div>
-              <b class="photos-item__title">Мост дьявола</b>
+              <h3 class="photos-item__title">Мост дьявола</h3>
               <p class="photos-item__author">Автор фото: Антон</p>
+              <button class="photos-item__likes photos-item__likes--trump">Изображение лайка</button>
               <p class="photos-item__likes photos-item__likes--trump">254</p>
             </li>
           </ul>
