--- a/source/photo.html
+++ b/source/photo.html
@@ -37,56 +37,51 @@
 
       <h1 class="visually-hidden"> Страница с фотографиями для туристического агенства «Седона»</h1>
 
-      <section class="head-page">
-        <h2 class="visually-hidden">Вступительная часть страницы</h2>
+      <section class="photos">
 
         <div>
-          <b class="head-page__title">Фото и видео</b>
+          <img class="form__picture" src="img/back-mobile-jpg.jpg" width="320" height="158" alt="sedona">
+          <h2 class="head-page__title">Фото и видео</h2>
           <p class="head-page__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
         </div>
-
-      </section>
-
-      <section class="photos">
-        <h2 class="visually-hidden">Часть страницы с фотографиями</h2>
 
         <div class="photos-position">
           <ul class="photos-list">
             <li class="photos-item">
-              <div class="photos-item__position">
-                <p><a class="photos-item__picture" href="https://via.placeholder.com/280x280">Фотография степи</a></p>
-              </div>
-              <h3 class="photos-item__title">Неродные просторы</h3>
+              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-1-mobile-jpg.jpg" width="280" height="280" alt="Фотография степи"></a>
+              <b class="photos-item__title">Неродные просторы</b>
               <p class="photos-item__author">Автор фото: Борис</p>
-              <button class="photos-item__likes photos-item__likes--trump">Изображение лайка</button>
-              <p class="photos-item__likes"> 1350</p>
+              <div>
+                <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
+                <span class="photos-item__likes">1350</span>
+              </div>
             </li>
             <li class="photos-item">
-              <div class="photos-item__position">
-                <p><a class="photos-item__picture" href="https://via.placeholder.com/280x280" >Фотография кактуса</a></p>
-              </div>
-              <h3 class="photos-item__title">Местная растительность</h3>
+              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-2-mobile-jpg.jpg" width="280" height="280" alt="Фотография кактуса"></a>
+              <b class="photos-item__title">Местная растительность</b>
               <p class="photos-item__author">Автор фото: Сергей</p>
-              <button class="photos-item__likes photos-item__likes--trump">Изображение лайка</button>
-              <p class="photos-item__likes photos-item__likes--trump"> 143</p>
+              <div>
+                <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
+                <p class="photos-item__likes photos-item__likes--trump">143</p>
+              </div>
             </li>
             <li class="photos-item">
-              <div class="photos-item__position">
-                <p><a class="photos-item__picture" href="https://via.placeholder.com/280x280">Фотография дороги в горах</a></p>
-              </div>
-              <h3 class="photos-item__title">Дорога на север</h3>
+              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-3-mobile-jpg.jpg" width="280" height="280" alt="Фотография дороги в горах"></a>
+              <b class="photos-item__title">Дорога на север</b>
               <p class="photos-item__author">Автор фото: Петр</p>
-              <button class="photos-item__likes photos-item__likes--trump">Изображение лайка</button>
-              <p class="photos-item__likes photos-item__likes--trump">96</p>
+              <div>
+                <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
+                <p class="photos-item__likes photos-item__likes--trump">96</p>
+              </div>
             </li>
             <li class="photos-item">
-              <div class="photos-item__position">
-                <p><a class="photos-item__picture" href="https://via.placeholder.com/280x280">Фотография моста</a></p>
-              </div>
-              <h3 class="photos-item__title">Мост дьявола</h3>
+              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-3-mobile-jpg.jpg" width="280" height="280" alt="Фотография моста"></a>
+              <b class="photos-item__title">Мост дьявола</b>
               <p class="photos-item__author">Автор фото: Антон</p>
-              <button class="photos-item__likes photos-item__likes--trump">Изображение лайка</button>
-              <p class="photos-item__likes photos-item__likes--trump">254</p>
+              <div>
+                <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
+                <p class="photos-item__likes photos-item__likes--trump">254</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -98,7 +93,7 @@
     <footer class="footer">
 
       <div class="footer__social social">
-        <h3 class="footer__title">#visitsedona</h3>
+        <b class="footer__title">#visitsedona</b>
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="https://twitter.com/sedona">Мы в Твиттере</a>
