Задание 1 в модуле 2, правка 7

--- a/source/form.html
+++ b/source/form.html
@@ -116,9 +116,8 @@
           <fieldset class="discription">
             <legend class="discription__title">Опишите свои эмоции:</legend>
             <div class="discription__text">
-            <label>
-              <textarea name="comment" rows="5" cols="20" placeholder="Опишите подробно все свои восторги"></textarea>
-            </label>
+            <textarea name="comment" id="comment-field" rows="5" cols="20" placeholder="Опишите подробно все свои восторги"></textarea>
+            <label class="visually-hidden" for="сomment-field">Отзыв клиента о поездке</label>
             </div>
           </fieldset>
 
