--- a/source/form.html
+++ b/source/form.html
@@ -117,7 +117,7 @@
             <legend class="discription__title">Опишите свои эмоции:</legend>
             <div class="discription__text">
             <textarea name="comment" id="comment-field" rows="5" cols="20" placeholder="Опишите подробно все свои восторги"></textarea>
-            <label class="visually-hidden" for="сomment-field">Отзыв клиента о поездке</label>
+            <label class="visually-hidden" for="comment-field">Отзыв клиента о поездке</label>
             </div>
           </fieldset>
 
