Удалены лишние пробелы из файлов index, photo,form. Тест npm одобрил эти файлы

--- a/source/photo.html
+++ b/source/photo.html
@@ -17,10 +17,10 @@
             </li>
             <li class="site-list__item">
               <a href="photo.html">Наши работы</a>
-            </li>  
+            </li>
             <li class="site-list__item">
               <a href="form.html">Форма отзыва</a>
-            </li> 
+            </li>
             <li class="site-list__item">
               <a href="#">HTML ACADEMY</a>
             </li>
@@ -62,14 +62,12 @@
               <p class="photos-item__author">Автор фото: Сергей</p>
               <div>
                 <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
-                <p class="photos-item__likes photos-item__likes--trump">143</p>
-              </div>
+                <p class="photos-item__likes photos-item__likes--trump">143</p></div>
             </li>
             <li class="photos-item">
               <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-3-mobile-jpg.jpg" width="280" height="280" alt="Фотография дороги в горах"></a>
               <b class="photos-item__title">Дорога на север</b>
-              <p class="photos-item__author">Автор фото: Петр</p>
-              <div>
+              <p class="photos-item__author">Автор фото: Петр</p><div>
                 <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
                 <p class="photos-item__likes photos-item__likes--trump">96</p>
               </div>
@@ -109,7 +107,7 @@
 
       <div class="footer__copyright copyright">
         <b class="copyright__text"> Разработано:</b><a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"> HTML Academy</a>
-      </div> 
+      </div>
 
     </footer>
 
