Исправленые ошибки в html, плюс задание 1 модуля 3 правка 1

--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -38,11 +39,12 @@
 
       <h1 class="visually-hidden">Страница для отзыва</h1>
 
-      <section class="form">
-        <div>
-          <img class="form__picture" src="img/back-mobile-jpg.jpg" width="320" height="158" alt="sedona">
-          <h2 class="head-page__title">Оставьте свой отзыв</h2>
-          <p class="head-page__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а так же о<br>посещённых вами <br>достопримечательностях</p>
+      <section class="form-wrap">
+
+        <div class="form-head-page">
+          <img class="form-head-page__picture" src="img/back-mobile-jpg.jpg" width="320" height="158" alt="sedona">
+          <h2 class="form-head-page__title">Оставьте свой отзыв</h2>
+          <p class="form-head-page__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а так же о<br>посещённых вами <br>достопримечательностях</p>
         </div>
 
         <form class="form" action="https://echo.htmlacademy.ru" method="POST">
