--- a/source/photo.html
+++ b/source/photo.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
@@ -39,16 +40,16 @@
 
       <section class="photos">
 
-        <div>
-          <img class="form__picture" src="img/back-mobile-jpg.jpg" width="320" height="158" alt="sedona">
-          <h2 class="head-page__title">Фото и видео</h2>
-          <p class="head-page__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
+        <div class="photos-head-page__position">
+          <img class="photos-head-page__picture" src="img/back-mobile-jpg.jpg" width="320" height="158" alt="sedona">
+          <h2 class="photos-head-page__title">Фото и видео</h2>
+          <p class="photos-head-page__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
         </div>
 
         <div class="photos-position">
           <ul class="photos-list">
             <li class="photos-item">
-              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-1-mobile-jpg.jpg" width="280" height="280" alt="Фотография степи"></a>
+              <a class="photos-item__position"><img class="photos-item__picture" href="img/photo-1-mobile-jpg.jpg" width="280" height="280" alt="Фотография степи"></a>
               <b class="photos-item__title">Неродные просторы</b>
               <p class="photos-item__author">Автор фото: Борис</p>
               <div>
