--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
@@ -32,25 +33,23 @@
     <main class="page-main">
 
       <h1 class="visually-hidden"> Сайт туристического агенства «Седона»</h1>
-
-      <section class="welcome">
-        <h2 class="visually-hidden"> Вступительная часть страницы</h2>
-        <div class="welcome-position">
-          <div class="welcome-wrap">
-            <img class="form__picture" src="img/back-mobile-jpg.jpg" width="320" height="389" alt="sedona">
-          </div>
+   
+      <section class="reasons">
+        <h2 class="visually-hidden">Причины для посещения городка Седона</h2>
+        <img class="welcome__picture" src="img/back-mobile-jpg.jpg" width="320" height="389" alt="sedona">
+        <div class="reasons-position">  
           <b class="welcome__number-zero">Седона - небольшой <br> городок в Аризоне, <br> заслуживающий большего!</b>
           <p class="welcome__number-zero">Рассмотрим 5 причин, по которым <br> Седона круче, чем Градн Каньон!</p>
         </div>
 
-        <ol class="reasons">
+        <ol class="reasons-list">
           <li class="realtown places">
             <div class="realtown-position">
               <h3 class="places__title">Настоящий городок</h3>
               <span class="places__number">— №1 —</span>
               <p class="places__recomendation">Седона не аттрацион для туристов, <br> там течёт своя жизнь</p>
               <img class="places__picture" src="img/photo-city-1-x.png" width="320" height="260" alt="фотография городка «Седона»">
-                <h2 class="visually-hidden">Преимущества городка Седона</h2>
+                
                 <ul class="advantages-list">
                   <li class="advantages__item advantages__item--home">
                     <b class="advantages__title">Жильё</b>
@@ -70,26 +69,26 @@
 
           <li class="bridge places">
             <h3 class="places__title">Там есть мост дьявола</h3>
-            <p class="places__number">— №2 —</p>
+            <span class="places__number">— №2 —</span>
             <p class="places__recomendation">Да, по нему можно пройти!Если вы <br>осмелитесь, конечно</p>
             <img class="places__picture" src="img/photo-bridge-1-x.png" width="320" height="260" alt="Фотография моста">
           </li>
 
           <li class="square places">
             <h3 class="places__title">Небольшая площадь</h3>
-            <p class="places__number">— №3 —</p>
+            <span class="places__number">— №3 —</span>
             <p class="places__recomendation">Все интересные места находятся <br>очень близко</p>
           </li>
 
           <li class="road places">
             <h3 class="places__title">Красивая дорога</h3>
-            <p class="places__number">— №4 —</p>
+            <span class="places__number">— №4 —</span>
             <p class="places__recomendation">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
           </li>
 
           <li class="tourists places">
             <h3 class="places__title">Мало туристов</h3>
-            <p class="places__number">— №5 —</p>
+            <span class="places__number">— №5 —</span>
             <p class="places__recomendation">Большинство едет в Гранд Каньон<br>и толпится там</p>
           </li>
         </ol>
