Созданы лесс-файлы для блоков

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="body">
 
     <header class="page-header">
 
@@ -37,14 +37,14 @@
       <section class="reasons">
         <h2 class="visually-hidden">Причины для посещения городка Седона</h2>
         <img class="welcome__picture" src="img/back-mobile-jpg.jpg" width="320" height="389" alt="sedona">
-        <div class="reasons-position">  
+        <div class="reasons__position">  
           <b class="welcome__number-zero">Седона - небольшой <br> городок в Аризоне, <br> заслуживающий большего!</b>
           <p class="welcome__number-zero">Рассмотрим 5 причин, по которым <br> Седона круче, чем Градн Каньон!</p>
         </div>
 
         <ol class="reasons-list">
           <li class="realtown places">
-            <div class="realtown-position">
+            <div class="realtown__position">
               <h3 class="places__title">Настоящий городок</h3>
               <span class="places__number">— №1 —</span>
               <p class="places__recomendation">Седона не аттрацион для туристов, <br> там течёт своя жизнь</p>
@@ -102,8 +102,8 @@
 
       <section class="map">
         <h2 class="visually-hidden">Часть страницы с картой</h2>
-        <div class="map-position">
-          <img class="map-picture" src="img/map-mobile-jpg.jpg" width="320" height="350" alt="Карта">
+        <div class="map__position">
+          <img class="map__picture" src="img/map-mobile-jpg.jpg" width="320" height="350" alt="Карта">
         </div>
       </section>
 
