--- a/source/photo.html
+++ b/source/photo.html
@@ -40,10 +40,10 @@
 
       <section class="photos">
 
-        <div class="photos-head-page__position">
-          <img class="photos-head-page__picture" src="img/back-mobile-jpg.jpg" width="320" height="158" alt="sedona">
-          <h2 class="photos-head-page__title">Фото и видео</h2>
-          <p class="photos-head-page__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
+        <div class="photos-head">
+          <img class="photos-head__picture" src="img/back-mobile-jpg.jpg" width="320" height="158" alt="sedona">
+          <h2 class="photos-head__title">Фото и видео</h2>
+          <p class="photos-head__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
         </div>
 
         <div class="photos-position">
