--- a/source/photo.html
+++ b/source/photo.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -17,7 +18,7 @@
               <a href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="photo.html">Наши работы</a>
+              <a href="photo.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
               <a href="form.html">Форма отзыва</a>
@@ -26,8 +27,8 @@
               <a href="#">HTML ACADEMY</a>
             </li>
           </ul>
-          <a class="page-header__logo" href="index.html">
-            <img class="page-header__logo-image" src="img/logotyle-mobile-svg.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»">
+          <a class="main-nav__logo" href="index.html">
+            <img class="main-nav__logo-image" src="img/logotyle-mobile-svg.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»">
           </a>
         </div>
       </nav>
@@ -41,7 +42,7 @@
       <section class="photos">
 
         <div class="photos-head">
-          <img class="photos-head__picture" src="img/back-mobile-jpg.jpg" width="320" height="158" alt="sedona">
+          <span class="photos-head__position photos-head__picture--sedona"><img class="photos-head__picture" src="img/bg-back-mobile@1x.jpg" width="320" height="158" alt="sedona"></span>
           <h2 class="photos-head__title">Фото и видео</h2>
           <p class="photos-head__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
         </div>
@@ -49,37 +50,38 @@
         <div class="photos-position">
           <ul class="photos-list">
             <li class="photos-item">
-              <a class="photos-item__position"><img class="photos-item__picture" href="img/photo-1-mobile-jpg.jpg" width="280" height="280" alt="Фотография степи"></a>
+              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Фотография степи"></a>
               <b class="photos-item__title">Неродные просторы</b>
               <p class="photos-item__author">Автор фото: Борис</p>
               <div>
-                <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
+                <button class="photos-item__likes photos-item__likes--trump" type="button"></button>
                 <span class="photos-item__likes">1350</span>
               </div>
             </li>
             <li class="photos-item">
-              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-2-mobile-jpg.jpg" width="280" height="280" alt="Фотография кактуса"></a>
+              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Фотография кактуса"></a>
               <b class="photos-item__title">Местная растительность</b>
               <p class="photos-item__author">Автор фото: Сергей</p>
               <div>
-                <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
-                <p class="photos-item__likes photos-item__likes--trump">143</p></div>
-            </li>
-            <li class="photos-item">
-              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-3-mobile-jpg.jpg" width="280" height="280" alt="Фотография дороги в горах"></a>
-              <b class="photos-item__title">Дорога на север</b>
-              <p class="photos-item__author">Автор фото: Петр</p><div>
-                <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
-                <p class="photos-item__likes photos-item__likes--trump">96</p>
+                <button class="photos-item__likes photos-item__likes--trump" type="button"></button>
+                <span class="photos-item__likes photos-item__likes--trump">143</span>
               </div>
             </li>
             <li class="photos-item">
-              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-3-mobile-jpg.jpg" width="280" height="280" alt="Фотография моста"></a>
+              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Фотография дороги в горах"></a>
+              <b class="photos-item__title">Дорога на север</b>
+              <p class="photos-item__author">Автор фото: Петр</p><div>
+                <button class="photos-item__likes photos-item__likes--trump" type="button"></button>
+                <span class="photos-item__likes photos-item__likes--trump">96</span>
+              </div>
+            </li>
+            <li class="photos-item">
+              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Фотография моста"></a>
               <b class="photos-item__title">Мост дьявола</b>
               <p class="photos-item__author">Автор фото: Антон</p>
               <div>
-                <button class="photos-item__likes photos-item__likes--trump" type="button">Нравится</button>
-                <p class="photos-item__likes photos-item__likes--trump">254</p>
+                <button class="photos-item__likes photos-item__likes--trump" type="button"></button>
+                <span class="photos-item__likes photos-item__likes--trump">254</span>
               </div>
             </li>
           </ul>
@@ -95,19 +97,20 @@
         <b class="footer__title">#visitsedona</b>
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/sedona">Мы в Твиттере</a>
+            <a class="social__link social__link--twitter" href="https://twitter.com/sedona"></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona">Мы в Фейсбуке</a>
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona"></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona">Мы в Ютубе</a>
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona"></a>
           </li>
         </ul>
       </div>
 
       <div class="footer__copyright copyright">
-        <b class="copyright__text"> Разработано:</b><a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"> HTML Academy</a>
+        <b class="copyright__text">Разработано</b>
+        <a class="copyright__link copyright__link--htmlacademy" href="https://htmlacademy.ru/intensive/adaptive"></a>
       </div>
 
     </footer>
